Fix T95477: Report error instead of crashing when Metal texture size limits exceeded.

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D14074